--- a/pom.xml
+++ b/pom.xml
@@ -90,11 +90,7 @@
 			<artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
 		
-		<!-- Active MQ : 아파치 비동기 메세지 전송 라이브러리  -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-activemq</artifactId>
-		</dependency>
+		<!-- Active MQ 기반 상향된 아파치 비동기 메세지 전송 라이브러리 Artemis -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-artemis</artifactId>
